--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block caroussel %}
+    
+{% endblock %}
 {% block body %}
        <!-- Three columns of text below the carousel -->
         <div class="row">
