--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,20 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccountController!{% endblock %}
+{% block title %}mon compte{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
+<h1>mon compte</h1>
+Bienvenue <b>{{app.user.firstname}}</b> sur votre compte 
+<hr>
     <ul>
-        <li>Your controller at <code><a href="{{ 'D:/ketrika/e_commerce/src/Controller/AccountController.php'|file_link(0) }}">src/Controller/AccountController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/ketrika/e_commerce/templates/account/index.html.twig'|file_link(0) }}">templates/account/index.html.twig</a></code></li>
+        <li><a href="{{path('account_password')}}">modification de mon mot de passe</a> </li>
+        <li>ajouter un adresse</li>
+        <li>mes commandes</li>
     </ul>
-</div>
+<hr>
 {% endblock %}
