--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,3 +10,21 @@
     background-color: #838383;
     color: white;
 }
+.product-item h5 {
+
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-bottom: 1px;
+}
+.product-item .product-subtitle {
+
+    display: block;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.product-item .product-price{
+
+    font-size: 15px;
+    font-weight: bold;
+}
