--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,3 +28,11 @@
     font-size: 15px;
     font-weight: bold;
 }
+
+.product-container {
+    margin-bottom: 154px;
+}
+.product-page-price {
+font-size: 18px;;
+
+}
