--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -4,20 +4,32 @@
   Nos Produits!{% endblock %}
 
 {% block body %}
-  <h1>Nos Produits</h1>
   <div class="row">
-    {% for product in products %}
+    <div class="col-md-3">
+      <h3>filtrer</h3>
+      {{form(form)}}
+    </div>
+    <div class="col-md-9">
+        <h3>Nos Produits</h3>
+        <div class="row product-container">
+            {% for product in products %}
 
-      <div class="col-md-4">
+            <div class="col-md-4">
 
-        <div class="product-item">
-          <img src="/uploads/products/{{product.illustration}}" alt="{{product.name}}" class="img-fluid">
-          <h5>{{product.name}}</h5>
-          <span class="product-subtitle">{{product.subtitle}}</span>
-          <span class="product-price"><b>{{product.price/100|number_format(2)}} $</b></span>
+                <div class="product-item">
+                    <a href="{{path('product',{'slug': product.slug})}}">
+                    <img src="/uploads/products/{{product.illustration}}" alt="{{product.name}}" class="img-fluid"></a>
+                    <h5>{{product.name}}</h5>
+                    <span class="product-subtitle">{{product.subtitle}}</span>
+                    <span class="product-price">
+                        <b>{{product.price/100|number_format(2)}}
+                        $</b>
+                    </span>
+                </div>
+            </div>
+            {% endfor %}
         </div>
-      </div>
-    {% endfor %}
-
+    </div>
   </div>
+
 {% endblock %}
