entity adress created

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -3,18 +3,40 @@
 {% block title %}Hello CartController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/ketrika/e_commerce/src/Controller/CartController.php'|file_link(0) }}">src/Controller/CartController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/ketrika/e_commerce/templates/cart/index.html.twig'|file_link(0) }}">templates/cart/index.html.twig</a></code></li>
-    </ul>
-</div>
+  <h3>Mon panier</h3>
+  <hr>
+   
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Produit</th>
+        <th scope="col">Quantite</th>
+        <th scope="col">Prix</th>
+        <th scope="col">Total</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% set total = null %}
+    {% for product in cart %}
+      
+      <tr>
+        <td>      
+        <img src="/uploads/products/{{product.product.illustration}}" alt="{{product.product.name}}"  height="75px">
+        </td>
+        <td>{{product.quantity}}</td>
+        <td>{{product.product.price/100|number_format(2)}} $</td>
+        <td>{{ (product.product.price * product.quantity)/100|number_format(2) }}$</td>
+      </tr>
+      {% set total = product.product.price * product.quantity +total %}
+    {% endfor %}
+    </tbody>
+  </table>
+  <div class="text-right">
+  <b>Nomre de produit :</b>{{cart|length}}</br>
+  <b>total de mon panier :{{total/100|number_format(2) }}$</b>
+  </div>
+  <div class="text-right">
+  
+  <a href="" class="btn btn-success">valider mon panier</a>
+  </div>
 {% endblock %}
